--- a/wu-api/Cargo.toml
+++ b/wu-api/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "wu-api"
-version = "0.0.0"
+version = "0.0.0-dev"
 authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
 edition = "2018"
 
 [dependencies]
 wu = { path = "../wu" }
+lhi = "=0.0.0-dev.14" # 0.0.0 is outdated
+json = "0.12.4"
