--- a/wu-web/Cargo.toml
+++ b/wu-web/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wu-web"
-version = "0.0.0"
+version = "0.0.0-dev"
 authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
 edition = "2018"
 
