--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "wu"
-version = "0.0.0"
+version = "0.0.0-dev"
 authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
 edition = "2018"
 
 [dependencies]
 kern = "1.1.6"
-wasm-bindgen = "0.2.60"
+rand = "0.7.3"
+sha3 = "0.8.2"
+hex = "0.4.2"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "0.2.60" }
+rand = { version = "0.7.3", features = ["wasm-bindgen"] }
