--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -10,6 +10,9 @@ rand = "0.7.3"
 sha3 = "0.8.2"
 hex = "0.4.2"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+aes-gcm = "0.5.0"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2.60" }
 rand = { version = "0.7.3", features = ["wasm-bindgen"] }
