--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -9,6 +9,7 @@ kern = "1.1.6"
 rand = "0.7.3"
 sha3 = "0.8.2"
 hex = "0.4.2"
+rust-argon2 = "0.8.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 aes-gcm = "0.5.0"
