--- a/build
+++ b/build
@@ -1,18 +1,21 @@
 #!/bin/bash
 
+mkdir -p target/build
 if [ "$#" -ne 1 ]; then
   echo "./build api|client|web|full"
 elif [ $1 == "api" ]; then
-  cross build -p wu-api --release --target x86_64-unknown-linux-musl && strip target/x86_64-unknown-linux-musl/release/wu-api
+  cross build -p wu-api --release --target x86_64-unknown-linux-gnu && strip target/x86_64-unknown-linux-gnu/release/wu-api
+  rm -f target/build/wu-api && cp target/x86_64-unknown-linux-musl/release/wu-api target/build/wu-api
 elif [ $1 == "client" ]; then
   cross build -p wu-client --release --target x86_64-unknown-linux-musl && strip target/x86_64-unknown-linux-musl/release/wu-client
+  rm -f target/build/wu-client && cp target/x86_64-unknown-linux-musl/release/wu-client target/build/wu-client
 elif [ $1 == "web" ]; then
   wasm-pack build --release --no-typescript -t web -d ../wu-app/pkg wu-web
+  rm -f target/build/wu-app.tar.xz && (cd wu-app && tar cfJ ../target/build/wu-app.tar.xz *)
 elif [ $1 == "full" ]; then
-  rm -rf target/build && mkdir -p target/build
-  ./build api && cp target/x86_64-unknown-linux-musl/release/wu-api target/build/wu-api
-  ./build client && cp target/x86_64-unknown-linux-musl/release/wu-client target/build/wu-client
-  ./build web && (cd wu-app && tar cfJ ../target/build/wu-app.tar.xz *)
+  ./build api
+  ./build client
+  ./build web
 else
   echo "./build api|client|web|full"
 fi
