--- a/build
+++ b/build
@@ -4,11 +4,11 @@ mkdir -p target/build
 if [ "$#" -ne 1 ]; then
   echo "./build api|client|web|full"
 elif [ $1 == "api" ]; then
-  cross build -p wu-api --release --target x86_64-unknown-linux-gnu && strip target/x86_64-unknown-linux-gnu/release/wu-api
-  rm -f target/build/wu-api && cp target/x86_64-unknown-linux-musl/release/wu-api target/build/wu-api
+  cross build -p wu-api --release && strip target/x86_64-unknown-linux-gnu/release/wu-api
+  rm -f target/build/wu-api && cp target/x86_64-unknown-linux-gnu/release/wu-api target/build/wu-api
 elif [ $1 == "client" ]; then
-  cross build -p wu-client --release --target x86_64-unknown-linux-musl && strip target/x86_64-unknown-linux-musl/release/wu-client
-  rm -f target/build/wu-client && cp target/x86_64-unknown-linux-musl/release/wu-client target/build/wu-client
+  cross build -p wu-client --release && strip target/x86_64-unknown-linux-gnu/release/wu-client
+  rm -f target/build/wu-client && cp target/x86_64-unknown-linux-gnu/release/wu-client target/build/wu-client
 elif [ $1 == "web" ]; then
   wasm-pack build --release --no-typescript -t web -d ../wu-app/pkg wu-web
   rm -f target/build/wu-app.tar.xz && (cd wu-app && tar cfJ ../target/build/wu-app.tar.xz *)
