--- a/wu-api/Cargo.toml
+++ b/wu-api/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 wu = { path = "../wu" }
-kern = { version = "1.7.0", features = ["http"] }
+kern = { version = "1.7.1", features = ["tls"] }
 json = "0.12.4"
 mysql = "24.0.0"
