--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -15,5 +15,5 @@ rand = { version = "0.8.5", features = ["getrandom"] }
 aes-gcm = "0.10.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = "0.2.97"
+wasm-bindgen = "=0.2.95"
 getrandom = { version = "0.2.15", features = ["js"] }
