--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -16,4 +16,4 @@ aes-gcm = "0.10.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.100"
-getrandom = { version = "0.3.0", features = ["js"] }
+getrandom = { version = "0.3.0", features = ["wasm_js"] }
