--- a/wu-api/Cargo.toml
+++ b/wu-api/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 wu = { path = "../wu" }
-kern = { version = "1.8.0", features = ["tls"] }
+kern = { version = "1.8.1", features = ["tls"] }
 jzon = "0.12.5"
 mysql = "26.0.0"
+rustls = "0.23.23"
