--- a/wu-web/Cargo.toml
+++ b/wu-web/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 [dependencies]
 wu = { path = "../wu" }
 console_error_panic_hook = "0.1.7"
+getrandom_02 = { package = "getrandom", version = "0.2.15", features = ["js"] }
+getrandom_03 = { package = "getrandom", version = "0.3.1", features = [
+    "wasm_js",
+] }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
