--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
 edition = "2021"
 
 [dependencies]
-kern = "1.8.0"
+kern = "1.8.1"
 sha3 = "0.10.8"
 hex = "0.4.3"
 rust-argon2 = "2.1.0"
-rand = { version = "0.9.0", features = ["getrandom"] }
+rand = "0.9.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 aes-gcm = "0.10.3"
