--- a/wu/Cargo.toml
+++ b/wu/Cargo.toml
@@ -12,7 +12,7 @@ rust-argon2 = "3.0.0"
 rand = "0.9.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-aes-gcm = "0.10.3"
+aes-gcm = "0.11.0-rc.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.104"
